packages/legend-query-builder/style/_query-builder.scss
/* ... */
.query-builder-property-editor {
  &__content {
    overflow-y: auto;
  }

  &__section {
    width: 100%;
    padding: 2rem;
  }

  &__section__content--empty {
    @include flexCenter;

    height: 4rem;
    width: 100%;
    margin-top: 1.5rem;
    border: 0.2rem dashed var(--color-dark-grey-200);
    color: var(--color-dark-grey-350);
    font-weight: 500;
  }
}

.query-builder-property-expression-badge {
  @include flexVCenter;

  width: 100%;
  height: 100%;

  &__content {
    @include flexVCenter;

    width: 100%;
    height: 2.2rem;
    color: var(--color-light-grey-0);
  }

  &__property__info {
    @include flexCenter;

    height: 2.2rem;
    width: 2.2rem;
    margin: 0.3rem;
    padding-left: 1rem;
    cursor: pointer;

    svg {
      font-size: 1.3rem;
      color: var(--color-dark-blue-shade-100);
    }

    &:hover svg {
      color: var(--color-light-grey-200) !important;
    }
  }

  &__action {
    width: 4.6rem;
    min-width: 4.6rem;
    height: 2.8rem;
    line-height: 2.2rem;
    margin-left: 1rem;
    font-weight: 700;
    font-size: 1rem;
    font-family: 'Roboto Mono', monospace;
    color: var(--color-light-grey-200);
    background: var(--color-dark-blue-shade-100);
    border-radius: 1.4rem;

    &:hover {
      color: var(--color-dark-grey-50);
      background: var(--color-light-grey-200) !important;
    }
  }

  &__action--error {
    background: var(--color-red-200);
    color: var(--color-light-grey-50);
    width: 6rem;
    min-width: 6rem;

    @include flexCenter;

    svg {
      font-size: 1rem;
      margin-right: 0.3rem;
    }

    &:hover {
      color: var(--color-light-grey-0);
    }
  }
}

.query-builder__milestoning-panel {
  &__all-versions-in-range-editor {
    margin: 1rem 0;
  }
}

.query-builder__side-bar {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;

  .query-builder__setup.panel {
    height: fit-content;
  }

  &__content {
    height: 100%;
  }
}

.query-builder-text-mode {
  &__modal {
    &__content {
      width: 100%;
      height: 100%;
      background: var(--color-dark-grey-50);
    }
  }

  &__lambda-editor {
    height: 100% !important;
    padding-top: 1rem;

    .monaco-editor {
      .margin,
      .monaco-editor-background {
        background: var(--color-dark-grey-50) !important;
      }
    }
  }

  &__modal--has-error {
    border: 0.1rem solid var(--color-red-200) !important;

    .modal__header {
      background: var(--color-red-200);
    }

    .modal__title__error-badge {
      @include flexCenter;

      margin-right: 1rem;
      background: var(--color-red-400);
      color: var(--color-white);
      height: 2.2rem;
      border-radius: 0.2rem;
      padding: 0.5rem;
      font-size: 1.2rem;
      user-select: none;
    }
  }
}

.query-builder__constants {
  &__modal {
    &__content {
      width: 100%;
      height: 100%;
      flex-direction: column;
      display: flex;
      padding: 2rem;
    }

    &__name {
      height: 3.4rem;

      &__input {
        height: 2.8rem;
        line-height: 2.8rem;
        width: 100%;
        background: var(--color-dark-grey-100);
        border: 0.1rem solid var(--color-dark-grey-300);
        color: var(--color-light-grey-200);

        &:focus {
          border: 0.1rem solid var(--color-blue-200);
          outline: none;
        }
      }

      .panel__content__form__section {
        padding: 0;
      }
    }
  }

  &__modal--has-error {
    border: 0.1rem solid var(--color-red-200) !important;

    .modal__header {
      background: var(--color-red-200);
    }

    .modal__title__error-badge {
      @include flexCenter;

      margin-right: 1rem;
      background: var(--color-red-400);
      color: var(--color-white);
      height: 2.2rem;
      border-radius: 0.2rem;
      padding: 0.5rem;
      font-size: 1.2rem;
      user-select: none;
    }
  }

  &__lambda-editor {
    height: calc(100% - 3.4rem) !important;
    border: 0.1rem solid var(--color-dark-grey-280);
    border-radius: 0;
  }
}

.query-builder__sql__container {
  width: 95%;
  margin: 1% auto 0;

  &__code-editor {
    height: 35rem;
  }

  &__icon svg {
    margin-left: 0.5rem;
    color: var(--color-light-grey-400) !important;
  }

  &__icon svg:hover {
    color: var(--color-white);
  }

  &__table {
    min-width: 50%;
  }

  &__item {
    width: 100%;
    border: 0.1rem solid var(--color-dark-grey-300);
    border-radius: 0.3rem;
    font-family: monospace;
    font-size: 1.3rem;
    padding: 1rem;
    margin: 0.5rem 0;
    line-height: 1.8rem;

    .decorationsOverviewRuler {
      display: none !important;
    }

    &__label {
      color: var(--color-white);
    }
  }
}

.query-builder__function-parameters-validation__container {
  width: 95%;
  margin: 1% auto 0;

  &__icon svg {
    margin-left: 0.5rem;
    color: var(--color-light-grey-400) !important;
  }

  &__icon svg:hover {
    color: var(--color-white);
  }

  &__table {
    min-width: 50%;
  }

  &__item {
    &__label {
      color: var(--color-white);
    }
  }
}

.query-builder__allocation__container {
  width: 95%;
  margin: 1% auto 0;

  &__icon svg {
    margin-left: 0.5rem;
    color: var(--color-light-grey-400) !important;
  }

  &__icon svg:hover {
    color: var(--color-white);
  }

  &__table {
    min-width: 10%;
  }

  &__item {
    width: 100%;
    border: 0.1rem solid var(--color-dark-grey-300);
    border-radius: 0.3rem;
    font-size: 2rem;
    padding: 1rem;
    margin: 0.5rem;
    line-height: 1.8rem;

    .decorationsOverviewRuler {
      display: none !important;
    }

    &__label {
      color: var(--color-white);
    }
  }
}
/* ... */

